Created custom pipe to make a hyphen string.

--- a/src/app/homework/homework.component.html
+++ b/src/app/homework/homework.component.html
@@ -14,3 +14,5 @@
     <div *ngFor="let date of dates;let even=even">
         <p *ngIf="even">{{date|date:'longDate'}}</p>
     </div>
+<!--Hyphen Pipe Example-->
+<p>Example with{{hyphenText|hyphenString}}text</p>
