Created Highlight-Bold directive.

--- a/src/app/homework/homework.component.html
+++ b/src/app/homework/homework.component.html
@@ -16,3 +16,7 @@
     </div>
 <!--Hyphen Pipe Example-->
 <p>Example with{{hyphenText|hyphenString}}text</p>
+
+<!--Directive Example-->
+<p appHighlightBold [appFontWeight]="'lighter'">Highlighted in default color and font-weight light</p>
+<p appHighlightBold [appHighlight]="'green'">Highlighted in green and font-weight defalut</p>
