--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-filter></app-filter>
-<app-note></app-note>
-<app-tools></app-tools>
-<app-homework></app-homework>
+<a routerLink='' routerLinkActive='activeLink'>Home</a>
+<a routerLink='addNote' routerLinkActive='activeLink'>Add note</a>
+<router-outlet></router-outlet>
