Routed homework component with parameter. Stylized the list of notes.

--- a/src/app/homework/homework.component.html
+++ b/src/app/homework/homework.component.html
@@ -1,4 +1,4 @@
- <!-- Homework 1 -->
+<!-- Homework 1 -->
  <p>Homework 1</p>
  <button mat-icon-button (click)="setBackground()">
     <mat-icon>add_circle</mat-icon>
@@ -20,3 +20,7 @@
 <!--Directive Example-->
 <p appHighlightBold [appFontWeight]="'lighter'">Highlighted in default color and font-weight light</p>
 <p appHighlightBold [appHighlight]="'green'">Highlighted in green and font-weight defalut</p>
+
+<!--Homework 3-->
+<p>Homework 3</p>
+<p>Parameter id={{id}}</p>
