--- a/src/app/tools/tools.component.scss
+++ b/src/app/tools/tools.component.scss
@@ -1,10 +1,8 @@
-.add-note-card {
-    max-width: 150px;
-          min-height: 150px;
-          flex: 1;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: aquamarine;
-    }
+.add-note{
+      display: flex;
+      margin: 10px;
+      .add-note-card {
+            background-color: aquamarine;
+      }
+}
     
