--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <a routerLink='' routerLinkActive='activeLink'>Home</a>
-<a routerLink='addNote' routerLinkActive='activeLink'>Add note</a>
+<a routerLink='/addNote' routerLinkActive='activeLink'>Add note</a>
 <a [routerLink]="['homework',id]" routerLinkActive='activeLink'>Homework</a>
 <router-outlet></router-outlet>
