--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -22,7 +22,8 @@
     This paragraph is in the DOM.
   </p>
  -->
-<div class="add-note">
+ 
+<div class="add-note" routerLink="/addNote">
 <mat-card class="add-note-card">
 <button mat-icon-button><mat-icon>add</mat-icon></button>
 </mat-card>
