--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,5 +1,5 @@
 <div class="filter-container">
     <div class="filter-div" *ngFor="let category of categories">
-        <button mat-raised-button color="primary">{{category.name|uppercase}}</button>
+        <button mat-raised-button color="primary" (click)="selectFilter(category.id)">{{category.name|uppercase}}</button>
     </div>
 </div>
