--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
     <mat-card-content>
        <p> {{note.description}}</p>
-       <p>Category: {{note.category}}</p>
+       <!-- <p>Category: {{note.category}}</p> -->
     </mat-card-content>
     <mat-card-footer>
         <div class="note-buttons">
