--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,24 +1,34 @@
 <div class="note-form">
-<mat-card class="mat-card-form" *ngFor="let note of notes">
-    <mat-card-header>
-        <h>{{note.title}}</h>
-    </mat-card-header>
-    <mat-card-content>
-       <p> {{note.description}}</p>
-       <!-- <p>Category: {{note.category}}</p> -->
-    </mat-card-content>
-    <mat-card-footer>
-        <div class="note-buttons">
-            <div class="note-type-button">
-                <button mat-icon-button><mat-icon> forward </mat-icon></button>
-                <button mat-icon-button><mat-icon>star_half</mat-icon></button>
-                <button mat-icon-button><mat-icon>done_outline</mat-icon></button>
+    <mat-card class="mat-card-form" *ngFor="let note of notes">
+        <mat-card-header>
+            <h>{{note.title}}</h>
+        </mat-card-header>
+        <mat-card-content>
+            <p> {{note.description}}</p>
+            <!-- <p>Category: {{note.category}}</p> -->
+        </mat-card-content>
+        <mat-card-footer>
+            <div class="note-buttons">
+                <div class="note-type-button">
+                    <button mat-icon-button>
+                        <mat-icon> forward </mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon>star_half</mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon>done_outline</mat-icon>
+                    </button>
+                </div>
+                <div class="note-edit-button">
+                    <button mat-icon-button>
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon> delete </mat-icon>
+                    </button>
+                </div>
             </div>
-            <div class="note-edit-button">
-                <button mat-icon-button><mat-icon>edit</mat-icon></button>
-                <button mat-icon-button><mat-icon> delete </mat-icon></button>
-            </div>
-        </div>
-    </mat-card-footer>
-</mat-card>
+        </mat-card-footer>
+    </mat-card>
 </div>
