--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -1,6 +1,8 @@
 .note-form {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     .mat-card-form{
         margin:10px;
     }
