--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     .filter-div {
         margin: 10px;
     }
